[package]
name = "project_t_revamped"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
fastnoise-lite = "1.1.1"
fnv = "1.0.7"
lazy_static = "1.5.0"
rand = "0.8.5"
bevy_mod_billboard = "0.7.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
